--- a/index.html
+++ b/index.html
@@ -39,26 +39,6 @@
           </div>
         </header>
         <section id="under-header">
-          <aside id="my-infos" class="full-infos">
-            <article id="languages">
-              <h2 class="gradient-text">Langues</h2>
-              <ul>
-                <li>Français [Voltaire]</li>
-                <li>Anglais B2</li>
-                <li>Espagnol A2</li>
-              </ul>
-            </article>
-            <article id="hobbies">
-              <h2 class="gradient-text">Hobbies</h2>
-              <ul>
-                <li>Informatique</li>
-                <li>Rugby</li>
-                <li>Jeux Vidéos</li>
-                <li>DIY/Bricolage</li>
-              </ul>
-            </article>
-          </aside>
-
           <section id="main-content">
             <article id="diplomes">
               <h2 class="bold-text gradient-text">Diplômes</h2>
@@ -101,64 +81,111 @@
                   <p>Stage dans la section EducTice de l'IFÉ, 2018</p>
                 </li>
                 <li>
-                  <h3>Lorem ipsum</h3>
-                  <p>???</p>
+                  <h3>Élaboration d'un annuaire en ligne de commande</h3>
+                  <p>Langage C, travail en équipe projet</p>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Iusto est accusamus ipsum officiis nam, veritatis placeat
-                    earum dicta.
+                    Élaboration d'un annuaire en ligne de commande développé en langage C,
+                    permettant d'effectuer les opérations basiques d'un annuaire (ajout,
+                    suppression, édition, recherche, tri) depuis un fichier CSV
+                  </p>
+                </li>
+                <li>
+                  <h3>Élaboration d'un logiciel d'analyse de graphe</h3>
+                  <p>Langage Java, travail en équipe projet</p>
+                  <p>
+                    Élaboration du logiciel GRAMA permettant l'analyse de graphes représentant
+                    une carte, permettant son analyse à l'aide d'opérations mathématiques
                   </p>
                 </li>
               </ul>
             </article>
           </section>
 
-          <section id="right-aside">
-            <aside id="competences">
-              <h2 class="medium-text gradient-text">Compétences</h2>
-              <div id="progress-bars">
-                <progressbar>
-                  <label>Hardware</label>
-                  <progress value="75" max="100"></progress>
-                </progressbar>
-                <progressbar>
-                  <label>Python</label>
-                  <progress value="65" max="100"></progress>
-                </progressbar>
-                <progressbar>
-                  <label>Bases de données</label>
-                  <progress value="40" max="100"></progress>
-                </progressbar>
-                <progressbar>
-                  <label>Web</label>
-                  <progress value="40" max="100"></progress>
-                </progressbar>
-                <progressbar>
-                  <label>Java</label>
-                  <progress value="35" max="100"></progress>
-                </progressbar>
-                <progressbar>
-                  <label>C</label>
-                  <progress value="30" max="100"></progress>
-                </progressbar>
-              </div>
-            </aside>
-
-            <aside id="my-infos" class="resp-infos">
-              <article id="languages">
-                <h2 class="gradient-text">Langues</h2>
+            <section id="right-aside">
+              <aside id="competences">
+              <h2 class="medium-text gradient-text">Compétences info.</h2>
+              <ul>
+                <li>
+                <h3>Réseaux</h3>
+                  <ul>
+                    <li>Routage</li>
+                    <li>Adressage IP</li>
+                    <li>WAMP</li>
+                    <li>BDD</li>
+                  </ul>
+                </li>
+                <li>
+                <h3>Développement</h3>
+                  <ul>
+                      <li>Python</li>
+                      <li>Java</li>
+                      <li>HTML/CSS</li>
+                    </ul>
+                </li>
+                <li>
+                  <h3>Hardware</h3>
+                    <ul>
+                      <li>Montage et entretien</li>
+                      <li>Entretien</li>
+                      <li>Diagnostic</li>
+                      <li>Réparation</li>
+                    </ul>
+                </li>
+              </ul>
+              <h2 class="medium-text gradient-text">Soft skills</h2>
                 <ul>
-                  <li>Français [Voltaire]</li>
-                  <li>Anglais B2</li>
-                  <li>Espagnol A2</li>
+                  <li>Intelligence émotionnelle</li>
+                  <li>Intelligence relationnelle</li>
+                  <li>Capable d'adaptation</li>
+                  <li>Travail d'équipe</li>
+                  <li>Assiduité</li>
+                  <li>Humilité</li>
+                  <li>Respect</li>
                 </ul>
-              </article>
-              <article id="hobbies">
-                <h2 class="gradient-text">Hobbies</h2>
-                <ul>
-                  <li>Informatique</li>
-                  <li>Rugby</li>
-                  <li>DIY/Bricolage</li>
+                <article id="languages">
+                  <h2 class="gradient-text">Langues</h2>
+                  <ul>
+                    <li>Français [Voltaire]</li>
+                    <li>Anglais B2</li>
+                    <li>Espagnol A2</li>
+                  </ul>
+                </article>
+                <article id="hobbies">
+                  <h2 class="gradient-text">Hobbies</h2>
+                  <ul>
+                    <li>Informatique</li>
+                    <li>Rugby</li>
+                    <li>Jeux Vidéos</li>
+                    <li>DIY/Bricolage</li>
+<!--              <div id="progress-bars">-->
+<!--                <progressbar>-->
+<!--                  <label>Hardware</label>-->
+<!--                  <progress value="75" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--                <progressbar>-->
+<!--                  <label>Python</label>-->
+<!--                  <progress value="65" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--                <progressbar>-->
+<!--                  <label>Bases de données</label>-->
+<!--                  <progress value="40" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--                <progressbar>-->
+<!--                  <label>Web</label>-->
+<!--                  <progress value="40" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--                <progressbar>-->
+<!--                  <label>Java</label>-->
+<!--                  <progress value="35" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--                <progressbar>-->
+<!--                  <label>C</label>-->
+<!--                  <progress value="30" max="100"></progress>-->
+<!--                </progressbar>-->
+<!--              </div>-->
+            </aside>
+            <aside id="my-infos" class="full-infos">
+
                 </ul>
               </article>
             </aside>
