Major design refactor (left aside gone -> under right aside, right aside completely revamped, main content updated with more content)

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <main>
         <header class="bold-text">
           <picture>
-            <img src="images/photo.png" alt="thicc ye" />
+            <img src="images/pic.png" alt="photo" />
           </picture>
 
           <div id="head-text" class="bold-text dynamic-gradient-text">
@@ -40,48 +40,26 @@
         </header>
         <section id="under-header">
           <section id="main-content">
-            <article id="diplomes">
-              <h2 class="bold-text gradient-text">Diplômes</h2>
-              <ul>
-                <li>
-                  <h3>Diplôme National du Brevet</h3>
-                  <p>Collège Henri Longchambon / 2018</p>
-                  <p>Admis Mention Très Bien, session 2018</p>
-                </li>
-                <li>
-                  <h3>Attestation d'engagement Lycéen et Collégien</h3>
-                  <p>
-                    Atteste de mon investissement dans la continuité pédagogique
-                    pendant la période de confinement de Mars 2020
-                  </p>
-                </li>
-                <li>
-                  <h3>Diplôme du Baccalauréat Technologique</h3>
-                  <p>Lycée La Martinière Monplaisir / 2018-2021</p>
-                  <p>Section STI2D, Admis Mention Très Bien, session 2021</p>
-                </li>
-                <li>
-                  <h3>Concours Général</h3>
-                  <p>Lycée La Martinière Monplaisir / 2021</p>
-                  <p>Inscrit au Concours Général, section 2I2D</p>
-                </li>
-                <li>
-                  <h3>Bachelor Universitaire Technologique</h3>
-                  <p>IUT Lyon 1 / 2021/2024</p>
-                  <p>Cursus Informatique; diplôme en cours de préparation</p>
-                </li>
-              </ul>
+            <article id="profile">
+              <h2 class="bold-text gradient-text">Qui suis-je ?</h2>
+              <p>Étudiant en informatique, je cherche actuellement une alternance dans le domaine du réseau.</p>
             </article>
             <article id="experience">
               <h2 class="bold-text gradient-text">Expérience</h2>
               <ul>
                 <li>
-                  <h3>Stage en entreprise</h3>
+                  <h3>Stage en entreprise - Hiver 2018</h3>
                   <p>ENS Lyon</p>
-                  <p>Stage dans la section EducTice de l'IFÉ, 2018</p>
+                  <p>Stage dans la section EducTice de l'IFÉ</p>
                 </li>
                 <li>
-                  <h3>Élaboration d'un annuaire en ligne de commande</h3>
+                  <h3>Développement d'un bot Discord - 2018-maintenant</h3>
+                  <p>Langage Python (auto-formation), projet personnel</p>
+                  <p>Développement d'un bot Discord comportant toutes les fonctionnalités basiques d'un bot,
+                  impliquant une auto-formation en Python et l'utilisation d'APIs</p>
+                </li>
+                <li>
+                  <h3>Élaboration d'un annuaire en ligne de commande - Hiver 2021</h3>
                   <p>Langage C, travail en équipe projet</p>
                   <p>
                     Élaboration d'un annuaire en ligne de commande développé en langage C,
@@ -90,12 +68,45 @@
                   </p>
                 </li>
                 <li>
-                  <h3>Élaboration d'un logiciel d'analyse de graphe</h3>
+                  <h3>Élaboration d'un logiciel d'analyse de graphe - Printemps 2022</h3>
                   <p>Langage Java, travail en équipe projet</p>
                   <p>
                     Élaboration du logiciel GRAMA permettant l'analyse de graphes représentant
-                    une carte, permettant son analyse à l'aide d'opérations mathématiques
+                    une carte, permettant son analyse à l'aide d'opérations mathématiques, depuis
+                    une IHM
                   </p>
+                </li>
+              </ul>
+            </article>
+            <article id="diplomes">
+              <h2 class="bold-text gradient-text">Formation</h2>
+              <ul>
+                <li>
+                  <h3>Diplôme National du Brevet - 2018</h3>
+                  <p>Collège Henri Longchambon</p>
+                  <p>Admis Mention Très Bien, session 2018</p>
+                </li>
+                <li>
+                  <h3>Attestation d'engagement Lycéen et Collégien - Mars 2020</h3>
+                  <p>
+                    Atteste de mon investissement dans la continuité pédagogique
+                    pendant la période de confinement de Mars 2020
+                  </p>
+                </li>
+                <li>
+                  <h3>Diplôme du Baccalauréat Technologique - 2018-2021</h3>
+                  <p>Lycée La Martinière Monplaisir</p>
+                  <p>Section STI2D, Admis Mention Très Bien, session 2021</p>
+                </li>
+                <li>
+                  <h3>Concours Général - 2021</h3>
+                  <p>Lycée La Martinière Monplaisir</p>
+                  <p>Inscrit au Concours Général, section 2I2D</p>
+                </li>
+                <li>
+                  <h3>Bachelor Universitaire Technologique - 2021-2024</h3>
+                  <p>IUT Lyon 1</p>
+                  <p>Cursus Informatique; diplôme en cours de préparation</p>
                 </li>
               </ul>
             </article>
@@ -103,7 +114,7 @@
 
             <section id="right-aside">
               <aside id="competences">
-              <h2 class="medium-text gradient-text">Compétences info.</h2>
+              <h2 class="medium-text gradient-text">Compétences informatiques</h2>
               <ul>
                 <li>
                 <h3>Réseaux</h3>
@@ -115,6 +126,15 @@
                   </ul>
                 </li>
                 <li>
+                  <h3>Informatique générale</h3>
+                  <ul>
+                    <li>Montage de PC fixes</li>
+                    <li>Entretien de tous types de PC</li>
+                    <li>Diagnostic sur tous types de PC</li>
+                    <li>Assistance informatique</li>
+                  </ul>
+                </li>
+                <li>
                 <h3>Développement</h3>
                   <ul>
                       <li>Python</li>
@@ -122,73 +142,63 @@
                       <li>HTML/CSS</li>
                     </ul>
                 </li>
-                <li>
-                  <h3>Hardware</h3>
-                    <ul>
-                      <li>Montage et entretien</li>
-                      <li>Entretien</li>
-                      <li>Diagnostic</li>
-                      <li>Réparation</li>
-                    </ul>
-                </li>
               </ul>
               <h2 class="medium-text gradient-text">Soft skills</h2>
                 <ul>
                   <li>Intelligence émotionnelle</li>
                   <li>Intelligence relationnelle</li>
-                  <li>Capable d'adaptation</li>
+                  <li>Capacité d'adaptation</li>
                   <li>Travail d'équipe</li>
                   <li>Assiduité</li>
                   <li>Humilité</li>
                   <li>Respect</li>
                 </ul>
-                <article id="languages">
-                  <h2 class="gradient-text">Langues</h2>
-                  <ul>
-                    <li>Français [Voltaire]</li>
-                    <li>Anglais B2</li>
-                    <li>Espagnol A2</li>
-                  </ul>
-                </article>
-                <article id="hobbies">
-                  <h2 class="gradient-text">Hobbies</h2>
-                  <ul>
-                    <li>Informatique</li>
-                    <li>Rugby</li>
-                    <li>Jeux Vidéos</li>
-                    <li>DIY/Bricolage</li>
-<!--              <div id="progress-bars">-->
-<!--                <progressbar>-->
-<!--                  <label>Hardware</label>-->
-<!--                  <progress value="75" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--                <progressbar>-->
-<!--                  <label>Python</label>-->
-<!--                  <progress value="65" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--                <progressbar>-->
-<!--                  <label>Bases de données</label>-->
-<!--                  <progress value="40" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--                <progressbar>-->
-<!--                  <label>Web</label>-->
-<!--                  <progress value="40" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--                <progressbar>-->
-<!--                  <label>Java</label>-->
-<!--                  <progress value="35" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--                <progressbar>-->
-<!--                  <label>C</label>-->
-<!--                  <progress value="30" max="100"></progress>-->
-<!--                </progressbar>-->
-<!--              </div>-->
-            </aside>
-            <aside id="my-infos" class="full-infos">
 
-                </ul>
-              </article>
-            </aside>
+                <!--              <div id="progress-bars">-->
+                <!--                <progressbar>-->
+                <!--                  <label>Hardware</label>-->
+                <!--                  <progress value="75" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--                <progressbar>-->
+                <!--                  <label>Python</label>-->
+                <!--                  <progress value="65" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--                <progressbar>-->
+                <!--                  <label>Bases de données</label>-->
+                <!--                  <progress value="40" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--                <progressbar>-->
+                <!--                  <label>Web</label>-->
+                <!--                  <progress value="40" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--                <progressbar>-->
+                <!--                  <label>Java</label>-->
+                <!--                  <progress value="35" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--                <progressbar>-->
+                <!--                  <label>C</label>-->
+                <!--                  <progress value="30" max="100"></progress>-->
+                <!--                </progressbar>-->
+                <!--              </div>-->
+                <section>
+                  <article id="languages">
+                    <h2 class="gradient-text">Langues</h2>
+                    <ul>
+                      <li>Anglais B2</li>
+                      <li>Espagnol A2</li>
+                    </ul>
+                  </article>
+                  <article id="hobbies">
+                    <h2 class="gradient-text">Hobbies</h2>
+                    <ul>
+                      <li>Informatique</li>
+                      <li>Rugby</li>
+                      <li>Jeux Vidéos</li>
+                      <li>DIY/Bricolage</li>
+                    </ul>
+                  </article>
+              </aside>
+              </section>
           </section>
         </section>
       </main>
